# conch-sage

./: .gitignore  README.md  conch_sage_internal_design_doc.md  conch_sage_user_guide.md  config.test.yaml  config.yaml  embedding_provider_design.md  pyproject.toml  requirements-base.txt  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.py  textual_tui_design.md
.github/workflows/: pr-check.yml  test.yml
.sweep/: config.yaml
chatcli/: README.md  main.py  shell.py
chatcli/commands/: chat.py  docs.py  export.py  search.py  web.py
chatcli/core/: config.py  embedding_provider.py  graph.py  graph_core.py  graph_io.py  graph_llm.py  graph_ops.py  llm_provider.py  mock.py  prompt_loader.py
chatcli/core/prompts/: smart_ask.j2  suggest_replies.j2  suggest_tags.j2  suggest_validation_sources.j2
tests/: conftest.py  test_graph_basic.py  test_graph_extra.py  test_import_export.py  test_llm_mock.py  test_prompt_templates.py  test_shell_commands.py  test_smart_ask.py  test_web_and_docs.py
