[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conch-sage"
version = "0.1.0"
description = "CLI-based personal research assistant with semantic memory and LLM workflows."
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.8"
dependencies = [
    "faiss-cpu",
    "prompt_toolkit",
    "typer",
    "pyyaml",
    "langchain",
    "langchain-ollama",
    "jinja2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "sentence-transformers",
    "torch",
]

[project.scripts]
conch-sage = "chatcli.main:main"
